GBG-Lehrer-Client: Veränderte Einstellungen bleiben gespeichert!

--- a/gbglehrerclient-0.1/debian/control
+++ b/gbglehrerclient-0.1/debian/control
@@ -13,5 +13,5 @@ Architecture: all
 Description: GBG-Client für Lehrer-Geräte
  Dieses Paket konfiguriert einen Lehrerzimmer-PC.
 Replaces: gdm3, gbgclient, gbgsusclient, gbglzclient, systemd
-Conflicts: gbgclient, gbgsusclient, gbglzclient
+Conflicts: gbgclient, gbgsusclient, gbglzclient, gnome-initial-setup
 Depends: thunderbird, thunderbird-locale-de, thunderbird-gnome-support, musescore3, flatpak, tesseract-ocr-deu, gimagereader, openssh-server, cryptsetup
