Aufnahme von netbeans in den convertible-client und default-jdk

--- a/dev/convertibleclient-lehrer-0.1/debian/control
+++ b/dev/convertibleclient-lehrer-0.1/debian/control
@@ -10,7 +10,7 @@ Homepage: <insert the upstream URL, if relevant>
 
 Package: convertibleclient-lehrer
 Architecture: all
-Depends: geary, thunderbird-locale-de, thunderbird-gnome-support, musescore3, flatpak, tesseract-ocr-deu, gimagereader, openssh-server, cryptsetup, apt-transport-https, wine32, winetricks, florence, libreoffice-base
+Depends: geary, thunderbird-locale-de, thunderbird-gnome-support, musescore3, flatpak, tesseract-ocr-deu, gimagereader, openssh-server, cryptsetup, apt-transport-https, wine32, winetricks, florence, libreoffice-base, default-jdk, netbeans
 Description: GBG-Client für Lehrer-Geräte (convertibles)
  Dieses Paket konfiguriert einen GBG-Lehrer-PC.
 Conflicts: gbgclient, gbgsusclient, gbglzclient, gnome-initial-setup, gbglehrerclient
