--- a/dev/gbgclient-hirsute-0.2/debian/control
+++ b/dev/gbgclient-hirsute-0.2/debian/control
@@ -10,7 +10,7 @@ Homepage: <insert the upstream URL, if relevant>
 
 Package: gbgclient-hirsute
 Architecture: all
-Depends: openssh-server, cryptsetup
+Depends: openssh-server, cryptsetup, wireguard
 Description: Standard-GBG-Client
  Das ist der Standard-GBG-Client.
 Replaces: gdm3, gbgsusclient, gbglzclient, gbglehrerclient
